--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.uniovi.asw</groupId>
-	<artifactId>citizensLoader2b</artifactId>
+	<artifactId>Loader_e3a</artifactId>
 	<version>0.0.1</version>
-	<name>citizensLoader0</name>
+	<name>Loader_e3a</name>
 	<packaging>jar</packaging>
 	<description>Citizens SubSystem</description>
 
