--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-**/correos
+
 
 
 # Eclipse Core
@@ -59,3 +59,5 @@ local.properties
 *.log
 ~*
 *.lck
+# Added by UO250932
+correos/
