--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
 	</properties>
 
 	<dependencies>
-
+	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongo-java-driver</artifactId>
+		<version>2.10.1</version>
+	</dependency>
 		<!--Logging -->
 		<dependency>
 			<groupId>log4j</groupId>
